Fix : try fixing the overflow for the 1000 time

--- a/sass/abstracts/_avriables.scss
+++ b/sass/abstracts/_avriables.scss
@@ -27,5 +27,6 @@ $phone : 310px ;
 //nav 
 $nav_width : 180px ;
 $main_width: calc(100% - $nav_width);
+$max-width : 1400px;
 
 $section_padding : 20px
