--- a/sass/base/_resets.scss
+++ b/sass/base/_resets.scss
@@ -59,3 +59,6 @@ ul {
 .flex-row {
     @include flex-row;
 }
+.flex-reverse{
+    flex-direction: row-reverse;
+}
